<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".features.main.MainFragment">

    <ImageView
        android:id="@+id/im_main"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b_main_random_emoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_random_emoji_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/im_main" />

    <Button
        android:id="@+id/b_main_emoji_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_emoji_list_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/b_main_random_emoji" />

    <EditText
        android:id="@+id/et_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:hint="@string/main_search_hint"
        app:layout_constraintTop_toBottomOf="@id/b_main_emoji_list" />

    <Button
        android:id="@+id/b_main_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_search_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_main" />

    <Button
        android:id="@+id/b_main_avatar_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/main_avatar_list_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/b_main_search" />

    <Button
        android:id="@+id/b_main_google_repos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/main_google_repos_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/b_main_avatar_list" />

</androidx.constraintlayout.widget.ConstraintLayout>